--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐾 ADVA Defensa Animal 🐾</title>
     <link rel="stylesheet" href="style.css">
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V66RYQWR68"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V66RYQWR68');
+</script>
 </head>
 <body>
     <header class="header">
@@ -53,4 +61,5 @@
     <p class="copy">&copy; 2025 Sitio web de mascotas.</p>
   </footer>
 </body>
+
 </html>
